--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-Self-care[[:space:]]audio[[:space:]]narrative.aup3 filter=lfs diff=lfs merge=lfs -text
+*.aup3 filter=lfs diff=lfs merge=lfs -text
+.lfsinit filter=lfs diff=lfs merge=lfs -text
